Fix ShiftFormModal spinner layout

--- a/src/Views/AgencyShifts/ShiftFormModal/ShiftFormModal.module.scss
+++ b/src/Views/AgencyShifts/ShiftFormModal/ShiftFormModal.module.scss
@@ -1,4 +1,5 @@
 .spinner {
   display: flex;
   justify-content: center;
+  padding: 24px 0;
 }
